# mistras-dta-analyzer

./: .gitignore  496da6fa59e0308b@v2.py  CHANGELOG.md  CLAUDE.md  README.md  dta_collection_guide.py  filter_config.json  inspect_data.py  main.py  pyproject.toml  run.py  run_pipeline.py
.github/workflows/: pipeline.yml  tests.yml
MistrasDTA/: MistrasDTA.py
ae_cluster_out/: latent_codes.npy  summary.txt
ae_hier_out/: hier_summary.txt  latent_codes.npy  summary.txt
ae_pipeline/: __init__.py  clustering.py  dataset.py  embedding.py  evolution.py  features.py  inference.py  io_dta.py  mapping.py  pipeline.py  preprocess.py  synth.py  utils.py  validation.py  viz.py
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/plugins/: example_neural_operator.py
backend/app/routers/: analysis.py  files.py  plugins.py
backend/app/services/: deep_clustering.py  dta_service.py  plugin_manager.py  signal_analysis.py  signal_filter.py
configs/: default.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: ChannelView.tsx  ClusterView.tsx  Dashboard.tsx  DeepClusterView.tsx  ExportPanel.tsx  FileUpload.tsx  FilterView.tsx  HitTable.tsx  ParametricCharts.tsx  PluginPanel.tsx  SensorView.tsx  Sidebar.tsx  WaveformViewer.tsx  WaveletView.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
tests/: conftest.py  test_ae_pipeline.py
tools/: README.md  ae_cluster_validate.py  ae_deep_cluster.py  ae_hier_cluster.py  ae_hierarchical_cluster.py  ae_param_cluster.py  requirements.txt  run_compare.py  run_compare_test.sh  stcd_ae.py  test_compare.py
tools/ae_compare/: README.md  __init__.py  clustering.py  data.py  encoders.py  metrics.py  pipeline.py  viz.py
yang_final/: latent_codes.npy  summary.txt
yang_hdbscan_check/: latent_codes.npy  summary.txt
yang_hier/: hier_summary.txt
yang_hier_new/: hier_summary.txt  latent_codes.npy  summary.txt
