[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "MistrasDTA"
version = "0.1.7"
dependencies = [
  "numpy",
]
requires-python = ">=3.6"
authors = [
  { name = "Dan Cogswell", email = "cogswell@alum.mit.edu" },
]
description = "Read AEWin acoustic emissions DTA files"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/d-cogswell/MistrasDTA"
Issues = "https://github.com/d-cogswell/MistrasDTA/issues"

[project.optional-dependencies]
test = ["pytest", "coveralls"]
# AE 损伤机制识别流水线 (ae_pipeline) 依赖; 核心读取器仅需 numpy。
analysis = [
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "umap-learn>=0.5.4",
  "hdbscan>=0.8.33",
  "PyWavelets>=1.4",
  "matplotlib>=3.7",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "pyarrow>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["MistrasDTA", "ae_pipeline"]